tests/error/poly_errors/non_linear2.err
Error: Expected a copyable type (at $FILE:14:8)
   | 
12 | @guppy
13 | def main() -> None:
14 |     foo(h)
   |         ^ Expected a copyable type, got type `qubit` which is not
   |           implicitly copyable

Guppy compilation failed due to 1 previous error
